--- a/.github/workflows/arm-platform.yaml
+++ b/.github/workflows/arm-platform.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: ARM-TTK
         uses: venura9/arm-ttk@1.0
         with:
-          path: ./src/ARM/KeyVault/deploy.json
+          path: ./src/ARM/
       - name: "Deploy Key Vault"
         id: kv
         uses: azure/arm-deploy@v1
