--- a/.github/workflows/arm-platform.yaml
+++ b/.github/workflows/arm-platform.yaml
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
   push:
     branches: [main, users/**]
-
 jobs:
   build_source_code_dev:
     environment: "Dev"
@@ -20,12 +19,30 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           enable-AzPSSession: true
+      - name: ARM-TTK - keyvault
+        uses: venura9/arm-ttk@1.0
+        with:
+          path: ./src/ARM/KeyVault/deploy.json
+      - name: ARM-TTK- StorageAccounts
+        uses: venura9/arm-ttk@1.0
+        with:
+          path: ./src/ARM/StorageAccounts/deploy.json
+      - name: ARM-TTK - AzureSecurityService
+        uses: venura9/arm-ttk@1.0
+        with:
+          path: ./src/ARM/AzureSecurityService/deploy.json
+      - name: ARM-TTK - WebApp
+        uses: venura9/arm-ttk@1.0
+        with:
+          path: ./src/ARM/WebApp/deploy.json
+      - name: ARM-TTK - CognitiveServices
+        uses: venura9/arm-ttk@1.0
+        with:
+          path: ./src/ARM/CognitiveServices/deploy.json
       - name: ARM-TTK
         uses: venura9/arm-ttk@1.0
         with:
-          path: ./src/ARM/*/
-          file: deploy.json
-
+          path: ./src/ARM/KeyVault/deploy.json
       - name: "Deploy Key Vault"
         id: kv
         uses: azure/arm-deploy@v1
