--- a/.github/workflows/arm-platform.yaml
+++ b/.github/workflows/arm-platform.yaml
@@ -23,6 +23,12 @@ jobs:
         uses: venura9/arm-ttk@1.0
         with:
           path: ./src/ARM/KeyVault/deploy.json
+      - name: Run Snyk to check key vault ARM template file for issues
+        uses: snyk/actions/iac@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          file: ./src/ARM/KeyVault/deploy.json
       - name: ARM-TTK- StorageAccounts
         uses: venura9/arm-ttk@1.0
         with:
@@ -39,10 +45,6 @@ jobs:
         uses: venura9/arm-ttk@1.0
         with:
           path: ./src/ARM/CognitiveServices/deploy.json
-      - name: ARM-TTK
-        uses: venura9/arm-ttk@1.0
-        with:
-          path: ./src/ARM/KeyVault/deploy.json
       - name: "Deploy Key Vault"
         id: kv
         uses: azure/arm-deploy@v1
