--- a/.github/workflows/arm-platform.yaml
+++ b/.github/workflows/arm-platform.yaml
@@ -23,12 +23,13 @@ jobs:
         uses: venura9/arm-ttk@1.0
         with:
           path: ./src/ARM/KeyVault/deploy.json
-      - name: Run Snyk to check key vault ARM template file for issues
+      - name: SNYK - Run Snyk to check key vault ARM template file for issues
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          file: ./src/ARM/KeyVault/deploy.json
+          file: .github/workflows/arm-platform.yaml
+
       - name: ARM-TTK- StorageAccounts
         uses: venura9/arm-ttk@1.0
         with:
