--- a/.github/workflows/bicep-platform.yaml
+++ b/.github/workflows/bicep-platform.yaml
@@ -31,8 +31,7 @@ jobs:
         id: filestest
         uses: aliencube/arm-ttk-actions@v0.3
         with:
-          path: ./src/Bicep/vaults
-          files: deploy.json
+          path: ./src/Bicep/vaults/deploy.json
 
       - name: Test result - files
         shell: bash
