bicep action update

--- a/.github/workflows/bicep-platform.yaml
+++ b/.github/workflows/bicep-platform.yaml
@@ -33,8 +33,8 @@ jobs:
         id: arm-ttk
         shell: pwsh
         run: |
-          wget https://github.com/Azure/arm-ttk/releases/download/20220121/arm-ttk.2022.01.21.zip
-          unzip ./arm-ttk.2022.01.21.zip
+          Invoke-WebRequest -Uri "https://github.com/Azure/arm-ttk/releases/download/20220121/arm-ttk.2022.01.21.zip" -OutFile "arm-ttk.2022.01.21.zip"
+          Expand-Archive .\arm-ttk.2022.01.21.zip
           Import-Module ..\arm-ttk\arm-ttk.psd1 -Force
           Test-AzTemplate -TemplatePath ./src/Bicep/vaults/deploy.json
 
