--- a/.github/workflows/bicep-platform.yaml
+++ b/.github/workflows/bicep-platform.yaml
@@ -55,18 +55,21 @@ jobs:
           Test-AzTemplate -TemplatePath ./src/Bicep/sites/azuredeploy.json -ErrorAction continue
 
       - name: SNYK - Run Snyk to check key vault ARM template file for issues
+        continue-on-error: true
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           file: ./src/Bicep/vaults/azuredeploy.json
       - name: SNYK - Run Snyk to check storageAccounts template file for issues
+        continue-on-error: true
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           file: ./src/Bicep/storageAccounts/azuredeploy.json
       - name: SNYK - Run Snyk to check sites template file for issues
+        continue-on-error: true
         uses: snyk/actions/iac@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
