--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: tfsec
+        id: tfsec-execution
         continue-on-error: true
         run: |
           docker run --rm -v "${{ github.workspace }}/src/Terraform:/src" aquasec/tfsec --format sarif /src/key-vault > ${{ github.workspace }}/src/Terraform/key-vault/tfsec-key-vault.sarif 
@@ -22,3 +23,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
           sarif_file: ./src/Terraform/key-vault/tfsec-key-vault.sarif
+
+      - ${{ if steps.tfsec-execution.outcome != 'success' }}:
+        - name: There are vulnerabilities
+          run: echo 'Deployment to prod is forbidden'
