--- a/.github/workflows/tfsec-pr-commenter.yml
+++ b/.github/workflows/tfsec-pr-commenter.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: tfsec
-        uses: tfsec/tfsec-pr-commenter-action
+        uses: tfsec/tfsec-pr-commenter-action@v1.0.5
         with:
           tfsec_args: --soft-fail
           github_token: ${{ github.token }}
