--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: tflint
         id: tflint-execution
+        working-directory: ${{ github.workspace }}/src/Terraform/key-vault
         run: |
             tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
   
@@ -37,7 +38,7 @@ jobs:
             rm tflint-AzRuleset.zip
             chmod +x tflint-ruleset-azurerm
   
-            docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/key-vault" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} --loglevel=debug $tfLintRulesExcluded
+            docker run --rm -v "${{ github.workspace }}/src/Terraform:/data" -w="/data/key-vault" -t ghcr.io/terraform-linters/tflint:${{ env.tfLintVersion }} --module --loglevel=debug $tfLintRulesExcluded
 
       - name: tfsec
         id: tfsec-execution
