--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: tflint
         id: tflint-execution
+        continue-on-error: true
         working-directory: ${{ github.workspace }}/src/Terraform/key-vault
         run: |
             tfLintRulesExcluded=`for i in $(echo ${{ env.tflintRulesExcluded }} | sed "s/,/ /g"); do echo "--disable-rule=$i"; done`
@@ -51,6 +52,10 @@ jobs:
         with:
           sarif_file: ./src/Terraform/key-vault/tfsec-key-vault.sarif
 
+      - name: Invalid value/syntax
+        if: steps.tflint-execution.outcome != 'success'
+        run: echo 'Deployment to prod is forbidden, fix the value/syntax provided'
+
       - name: There are vulnerabilities
         if: steps.tfsec-execution.outcome != 'success'
-        run: echo 'Deployment to prod is forbidden'
+        run: echo 'Deployment to prod is forbidden, vulnerabilities found'
