--- a/.github/workflows/tf-pr-commenter.yml
+++ b/.github/workflows/tf-pr-commenter.yml
@@ -2,6 +2,12 @@ name: tf-pr-commenter
 on:
   pull_request:
 
+env:
+  tflintRulesExcluded: ""
+  tfLintAzureRulesVersion: v0.14.0
+  tfLintVersion: v0.34.1
+  tfsecVersion: v1.1.5
+
 jobs:
   terraform:
     name: Terraform PR commenter
@@ -11,27 +17,33 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@master
 
-      - uses: actions/cache@v2
-        name: Cache plugin dir
-        with:
-          path: ~/.tflint.d/plugins
-          key: ubuntu-latest-tflint-${{ hashFiles('.tflint.hcl') }}
-
       - uses: terraform-linters/setup-tflint@v1
         name: Setup TFLint
         with:
-          tflint_version: v0.34.1
+          tflint_version: ${{ env.tfLintVersion }}
 
       - name: tflint
         continue-on-error: true
         run: |
-          tflint --init
-          cd ${{ github.workspace }}/src/Terraform/key-vault
-          tflint -f compact --module
+            echo 'plugin "azurerm" {' >.tflint.hcl
+            echo '  enabled = true' >>.tflint.hcl
+            echo '}' >>.tflint.hcl
+            mkdir -p .tflint.d/plugins
+            cd .tflint.d/plugins
+            
+            curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
+            unzip tflint-AzRuleset.zip
+            rm tflint-AzRuleset.zip
+            chmod +x tflint-ruleset-azurerm
+
+            tflint --init
+            cd ${{ github.workspace }}/src/Terraform/key-vault
+            tflint -f compact --module
 
       - name: tfsec
         uses: tfsec/tfsec-pr-commenter-action@main
         with:
           tfsec_args: --soft-fail
+          tfsec_version: ${{ env.tfsecVersion }}
           github_token: ${{ github.token }}
           working_directory: ./src/Terraform
