--- a/.github/workflows/tf-pr-commenter.yml
+++ b/.github/workflows/tf-pr-commenter.yml
@@ -23,6 +23,20 @@ jobs:
       #     github_token: ${{ github.token }}
       #     tflint_version: ${{ env.tfLintVersion }}
 
+      - name: Setup tflint AzureRM plugin
+        working-directory: ${{ github.workspace }}/src/Terraform/key-vault
+        run: |
+            echo 'plugin "azurerm" {' >.tflint.hcl
+            echo '  enabled = true' >>.tflint.hcl
+            echo '}' >>.tflint.hcl
+            mkdir -p .tflint.d/plugins
+            cd .tflint.d/plugins
+            
+            curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
+            unzip tflint-AzRuleset.zip
+            rm tflint-AzRuleset.zip
+            chmod +x tflint-ruleset-azurerm
+
       - name: tflint
         uses: reviewdog/action-tflint@master
         with:
@@ -31,7 +45,6 @@ jobs:
           reporter: github-pr-review
           fail_on_error: "true"
           tflint_version: "${{ env.tfLintVersion }}"
-          tflint_rulesets: "azurerm"
           flags: "--module"
 
       # - name: tflint
